[gd_scene load_steps=37 format=3 uid="uid://0yeqcv7hi0np"]

[ext_resource type="Script" uid="uid://bborfmfsmfs1p" path="res://Scenes/NPC/walker.gd" id="1_4jbhg"]
[ext_resource type="Script" uid="uid://c6bwnu8ionfyj" path="res://Scenes/NPC/speech_bubble.gd" id="2_3bs2o"]
[ext_resource type="Texture2D" uid="uid://d2xkne4tibpuf" path="res://Sprites/UI/Speech_Bubble.png" id="3_dlkqt"]
[ext_resource type="Texture2D" uid="uid://bkhd5qpo7jcxk" path="res://Sprites/Character/View.png" id="4_quoib"]
[ext_resource type="Texture2D" uid="uid://b60ctx7f77gus" path="res://Sprites/Character/Player/Shadow.png" id="6_j6aes"]
[ext_resource type="Texture2D" uid="uid://cbh20l1v3bn45" path="res://Sprites/NPC/Arms/Male/Arms1.png" id="7_xc8fd"]
[ext_resource type="Texture2D" uid="uid://b871hwjfy4rc7" path="res://Sprites/NPC/Peasant Male/Head.png" id="8_yhoq5"]
[ext_resource type="Texture2D" uid="uid://hy7fgx1p83w" path="res://Sprites/NPC/Body/Male/Body1.png" id="9_trxea"]
[ext_resource type="Script" uid="uid://cplrtmxlkt38w" path="res://Scenes/NPC/bag_in_hand.gd" id="10_qglg1"]
[ext_resource type="Texture2D" uid="uid://bhycyf4n7lh2m" path="res://Sprites/Items/Bag.png" id="12_f5ihh"]
[ext_resource type="Texture2D" uid="uid://sgsnbyywla03" path="res://Sprites/Effects/stun.png" id="13_bfsxj"]
[ext_resource type="AudioStream" uid="uid://bqjihn3o5s6b4" path="res://Sounds/Footsteps/snd_base_footstep_1.wav" id="14_28uq4"]
[ext_resource type="Script" uid="uid://b5ka1xxnunxhb" path="res://Scenes/Statemachine/state_machine.gd" id="15_fy5wf"]
[ext_resource type="Script" uid="uid://dj6pi3o0ark70" path="res://Scenes/Statemachine/idle.gd" id="16_s0ji6"]
[ext_resource type="Script" uid="uid://pr4e0twtdmp3" path="res://Scenes/Statemachine/walk.gd" id="17_ycnhp"]
[ext_resource type="Script" uid="uid://by5mceetv5cgc" path="res://Scenes/Statemachine/panic.gd" id="18_46yni"]
[ext_resource type="Script" uid="uid://pcohio278h2d" path="res://Scenes/Statemachine/chase.gd" id="19_w8sti"]
[ext_resource type="Script" uid="uid://cgcavdcnfrij1" path="res://Scenes/Statemachine/battle.gd" id="20_aml3j"]
[ext_resource type="Script" uid="uid://bsxpgvarcynvh" path="res://Scenes/Statemachine/knockdown.gd" id="21_6iigq"]
[ext_resource type="Script" uid="uid://dnse54rqekqyi" path="res://Scenes/NPC/caution.gd" id="22_077h4"]
[ext_resource type="Script" uid="uid://63hs6xtfngws" path="res://Scenes/NPC/warning.gd" id="23_jnms7"]
[ext_resource type="Script" uid="uid://bkafk8c6pv8na" path="res://Scenes/NPC/actions.gd" id="24_exg7m"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cy40q"]
radius = 18.0
height = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gc6e7"]
radius = 6.00521

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nyftf"]
radius = 18.0
height = 80.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qglg1"]
size = Vector2(0.5, 10.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_qglg1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vm1lp"]
radius = 20.0809

[sub_resource type="Animation" id="Animation_gc6e7"]
resource_name = "Knockdown"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(4, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Stun:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visual:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visual/RightHand:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-33, -31)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visual/RightHand:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Visual/LeftHand:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(30, -32)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Visual/LeftHand:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Stun:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.5, 0.7, 0.9, 1.1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 0, 1, 2, 0]
}

[sub_resource type="Animation" id="Animation_nyftf"]
resource_name = "Panic"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.949468,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}],
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 40), Vector2(0, 40), Vector2(0, 40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Stun:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visual:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visual:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0, 0.0872665, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visual/RightHand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-40, -40), Vector2(-39, -51), Vector2(-40, -40), Vector2(-39, -51), Vector2(-40, -40)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Visual/RightHand:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.174533, 0.872665, 0.174533, 0.872665, 0.174533]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Visual/LeftHand:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(26, -48), Vector2(30, -43), Vector2(26, -48), Vector2(30, -43), Vector2(26, -48)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Visual/LeftHand:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [-2.26893, -1.74533, -2.26893, -1.74533, -2.26893]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"blink"
}, {
"args": [],
"method": &"blink"
}]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Visual/RightHand:flip_h")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_s4340"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visual/RightHand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visual/RightHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visual/LeftHand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.174533]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visual/LeftHand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(31, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Stun:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visual:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cy40q"]
resource_name = "Walk"
length = 1.6
loop_mode = 1
step = 0.2
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.949468,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}, {
"end_offset": 0.946418,
"start_offset": 0.0,
"stream": ExtResource("14_28uq4")
}],
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Shadow:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 40), Vector2(0, 40), Vector2(0, 40)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4), Vector2(3, 3), Vector2(4, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Stun:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visual:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0), Vector2(0, -20), Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visual:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0, 0.0872665, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visual/RightHand:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.201228, 0.4, 0.6, 0.8, 1.00123, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-27, -45), Vector2(-30, -48), Vector2(-27, -45), Vector2(-30, -48), Vector2(-27, -45), Vector2(-30, -48), Vector2(-27, -45), Vector2(-30, -48), Vector2(-27, -45)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Visual/RightHand:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.201228, 0.4, 0.6, 0.8, 1.00123, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-2.87979, -3.14159, -2.87979, -3.14159, -2.87979, -3.14159, -2.87979, -3.14159, -2.87979]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Visual/LeftHand:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.207417, 0.4, 1.00742, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(28, -30), Vector2(19, -30), Vector2(28, -30), Vector2(19, -30), Vector2(28, -30)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Visual/LeftHand:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.207417, 0.4, 0.59785, 0.8, 1.00742, 1.2, 1.39785, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0, -0.523599, 0.0, 0.523599, 0.0, -0.523599, 0.0]
}
tracks/10/type = "method"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath(".")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"blink"
}, {
"args": [],
"method": &"blink"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5kyw"]
_data = {
&"Knockdown": SubResource("Animation_gc6e7"),
&"Panic": SubResource("Animation_nyftf"),
&"RESET": SubResource("Animation_s4340"),
&"Walk": SubResource("Animation_cy40q")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nyftf"]
bg_color = Color(0.180392, 0.180392, 0.180392, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mr8v"]
bg_color = Color(0.819608, 0, 0.219608, 0.588235)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7mr8v"]
radius = 46.0
height = 92.0

[node name="TravellerWithBag" type="CharacterBody2D" groups=["Character"]]
y_sort_enabled = true
collision_mask = 0
script = ExtResource("1_4jbhg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_cy40q")

[node name="DebugLabel" type="Label" parent="."]
offset_left = -81.0
offset_top = -228.0
offset_right = 87.0
offset_bottom = -173.0
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeechBubble" type="Node2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0.705882)
position = Vector2(-144, -128)
script = ExtResource("2_3bs2o")

[node name="Background" type="Sprite2D" parent="SpeechBubble"]
texture = ExtResource("3_dlkqt")

[node name="Label" type="Label" parent="SpeechBubble/Background"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.822
offset_left = -96.0
offset_top = -42.0
offset_right = -99.0
offset_bottom = -36.912
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LeftSide" type="Marker2D" parent="SpeechBubble"]

[node name="RightSide" type="Marker2D" parent="SpeechBubble"]
position = Vector2(296, 0)

[node name="ViewArea" type="Area2D" parent="."]
visibility_layer = 64
position = Vector2(0, -72)
collision_layer = 73
collision_mask = 73

[node name="Collision" type="CollisionPolygon2D" parent="ViewArea"]
position = Vector2(33, -90)
polygon = PackedVector2Array(26, 48, 231, -152, 301, -54, 333, 97, 305, 218, 234, 332, 26, 128)

[node name="RayCast2D" type="RayCast2D" parent="ViewArea/Collision"]
unique_name_in_owner = true
position = Vector2(46, 89)
target_position = Vector2(413, 0)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="Sprite" type="Sprite2D" parent="ViewArea/Collision"]
modulate = Color(1, 1, 1, 0.0588235)
position = Vector2(179, 88)
texture = ExtResource("4_quoib")
flip_h = true

[node name="CharacterVisualContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Shadow" type="Sprite2D" parent="CharacterVisualContainer"]
modulate = Color(1, 1, 1, 0.705882)
position = Vector2(0, 40)
scale = Vector2(4, 4)
texture = ExtResource("6_j6aes")

[node name="Visual" type="Node2D" parent="CharacterVisualContainer"]

[node name="LeftHand" type="Sprite2D" parent="CharacterVisualContainer/Visual"]
position = Vector2(31, -10)
rotation = -0.174533
scale = Vector2(4, 4)
texture = ExtResource("7_xc8fd")
hframes = 2
vframes = 2
frame = 1

[node name="Head" type="Sprite2D" parent="CharacterVisualContainer/Visual"]
position = Vector2(0, -78)
scale = Vector2(4, 4)
texture = ExtResource("8_yhoq5")
flip_h = true
hframes = 2
vframes = 2
frame = 3

[node name="HeadCollision" type="Area2D" parent="CharacterVisualContainer/Visual/Head"]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterVisualContainer/Visual/Head/HeadCollision"]
position = Vector2(0.25, -1.75)
shape = SubResource("CircleShape2D_gc6e7")

[node name="Body" type="Sprite2D" parent="CharacterVisualContainer/Visual"]
position = Vector2(0, -7)
scale = Vector2(4, 4)
texture = ExtResource("9_trxea")
flip_h = true
hframes = 2

[node name="BodyArea" type="Area2D" parent="CharacterVisualContainer/Visual/Body"]
position = Vector2(0, 1.75)
scale = Vector2(0.25, 0.25)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterVisualContainer/Visual/Body/BodyArea"]
position = Vector2(0, -18)
shape = SubResource("CapsuleShape2D_nyftf")

[node name="CollisionShape2D" type="StaticBody2D" parent="CharacterVisualContainer/Visual/Body"]
position = Vector2(-6, 0)
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterVisualContainer/Visual/Body/CollisionShape2D"]
shape = SubResource("RectangleShape2D_qglg1")

[node name="RightHand" type="Sprite2D" parent="CharacterVisualContainer/Visual"]
position = Vector2(-20, -16)
rotation = 1.5708
scale = Vector2(4, 4)
texture = ExtResource("7_xc8fd")
flip_h = true
hframes = 2
vframes = 2

[node name="Bag" type="Node2D" parent="CharacterVisualContainer/Visual/RightHand"]
show_behind_parent = true
position = Vector2(3.72963, -5.39929)
rotation = 3.08923
scale = Vector2(0.25, 0.25)
script = ExtResource("10_qglg1")

[node name="PinJoint2D" type="PinJoint2D" parent="CharacterVisualContainer/Visual/RightHand/Bag"]
position = Vector2(-2.6178, -21.9351)
node_a = NodePath("../StaticBody2D")
node_b = NodePath("../Bag")

[node name="StaticBody2D" type="StaticBody2D" parent="CharacterVisualContainer/Visual/RightHand/Bag"]
position = Vector2(-4.98989, -23.4755)
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterVisualContainer/Visual/RightHand/Bag/StaticBody2D"]
shape = SubResource("CircleShape2D_qglg1")

[node name="Bag" type="RigidBody2D" parent="CharacterVisualContainer/Visual/RightHand/Bag"]
collision_layer = 64
collision_mask = 64
mass = 2.0
gravity_scale = 0.2
center_of_mass_mode = 1
center_of_mass = Vector2(0, -10)
contact_monitor = true
max_contacts_reported = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterVisualContainer/Visual/RightHand/Bag/Bag"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_vm1lp")

[node name="Sprite2D" type="Sprite2D" parent="CharacterVisualContainer/Visual/RightHand/Bag/Bag"]
position = Vector2(0, -20)
texture = ExtResource("12_f5ihh")
offset = Vector2(0, 20)

[node name="Drop_Position" type="Marker2D" parent="CharacterVisualContainer"]
position = Vector2(-1, 3)

[node name="Stun" type="Sprite2D" parent="CharacterVisualContainer"]
visible = false
position = Vector2(96, -32)
scale = Vector2(3, 3)
texture = ExtResource("13_bfsxj")
vframes = 3
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterVisualContainer"]
libraries = {
&"": SubResource("AnimationLibrary_n5kyw")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CharacterVisualContainer"]
volume_db = 7.653

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("15_fy5wf")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("16_s0ji6")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("17_ycnhp")

[node name="Panic" type="Node" parent="StateMachine"]
script = ExtResource("18_46yni")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("19_w8sti")

[node name="Battle" type="Node" parent="StateMachine"]
script = ExtResource("20_aml3j")

[node name="Knockdown" type="Node" parent="StateMachine"]
script = ExtResource("21_6iigq")

[node name="Caution" type="Node" parent="StateMachine"]
script = ExtResource("22_077h4")

[node name="Warning" type="Node" parent="StateMachine"]
script = ExtResource("23_jnms7")

[node name="Timer" type="Timer" parent="StateMachine/Warning"]
one_shot = true

[node name="Actions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("24_exg7m")

[node name="OnScreenIndicators" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -216)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -68.0
offset_top = -168.0
offset_right = 66.0
offset_bottom = -141.0
theme_override_styles/background = SubResource("StyleBoxFlat_nyftf")
theme_override_styles/fill = SubResource("StyleBoxFlat_7mr8v")
show_percentage = false

[node name="Label" type="Label" parent="HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectArea" type="Area2D" parent="."]
position = Vector2(0, -64)
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_7mr8v")

[connection signal="body_entered" from="ViewArea" to="CharacterVisualContainer" method="_on_view_area_body_entered"]
[connection signal="body_exited" from="ViewArea" to="CharacterVisualContainer" method="_on_view_area_body_exited"]
[connection signal="body_entered" from="CharacterVisualContainer/Visual/Head/HeadCollision" to="CharacterVisualContainer" method="_on_head_collision_body_entered"]
[connection signal="body_entered" from="CharacterVisualContainer/Visual/Body/BodyArea" to="CharacterVisualContainer" method="_on_body_area_body_entered"]
[connection signal="body_entered" from="CharacterVisualContainer/Visual/RightHand/Bag/Bag" to="CharacterVisualContainer/Visual/RightHand/Bag" method="_on_bag_body_entered"]
[connection signal="timeout" from="StateMachine/Warning/Timer" to="StateMachine/Warning" method="_on_timer_timeout"]
[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
